# CS2Callouts

./: .gitignore  .gitignore_archive_note  COMMANDS.md  ENHANCED_CLI.md  MIGRATION.md  POLYGON_FIX_SUMMARY.md  POLYGON_RENDERING.md  README.md  TODO.md  clean.py  context.md  debug_polygons.py  debug_transform.py  demo.py  extract_all_maps.ps1  extract_all_maps.py  map-data.json  pyproject.toml  requirements.txt  run_map.ps1  scripts.py  test_polygon_fix.py  workflow.ps1  workflow.py
archive/: README.md  check_env.ps1  clean_outputs.ps1  vrf_extract_callout_models.ps1
cs2_callouts/: __init__.py  __main__.py  cli.py  extract.py  geometry.py  gltf_loader.py  pipeline.py  visualize.py
docs/: 3D_POLYGON_DATA.md  ENHANCED_2D_PROJECTION.md  GITHUB_ISSUES.md  README.md  SOURCE2_TRANSFORMATIONS.md  TODO.md
scripts/: vrf_extract_callout_models.ps1  vrf_setup.ps1
